13: Se intenta arreglr api para el cobro y se intenta implementar plugin tooltipster

--- a/wp-content/themes/tema_proyecto/assets/css/styles.css
+++ b/wp-content/themes/tema_proyecto/assets/css/styles.css
@@ -426,3 +426,17 @@ footer {
     top: 20px;
   }
 }
+
+/* This is how you would create a custom secondary theme on top of tooltipster-noir: */
+
+.tooltipster-sidetip.tooltipster-noir.tooltipster-noir-customized .tooltipster-box {
+	background: grey;
+	border: 3px solid red;
+	border-radius: 6px;
+	box-shadow: 5px 5px 2px 0 rgba(0,0,0,0.4);
+}
+
+.tooltipster-sidetip.tooltipster-noir.tooltipster-noir-customized .tooltipster-content {
+	color: blue;
+	padding: 8px;
+}
