--- a/wp-content/themes/tema_proyecto/assets/css/styles.css
+++ b/wp-content/themes/tema_proyecto/assets/css/styles.css
@@ -31,7 +31,7 @@ body {
 .estado_solicitud {
   text-align: center;
   font-family: 'Quicksand', sans-serif;
-  font-weight: 700;
+  font-weight:{ñ´}0 700;
 }
 /*BARRA DE NAVEGACIÓN*/
 .container-fluid {
@@ -425,18 +425,4 @@ footer {
   .formulario {
     top: 20px;
   }
-}
-
-/* This is how you would create a custom secondary theme on top of tooltipster-noir: */
-
-.tooltipster-sidetip.tooltipster-noir.tooltipster-noir-customized .tooltipster-box {
-	background: grey;
-	border: 3px solid red;
-	border-radius: 6px;
-	box-shadow: 5px 5px 2px 0 rgba(0,0,0,0.4);
-}
-
-.tooltipster-sidetip.tooltipster-noir.tooltipster-noir-customized .tooltipster-content {
-	color: blue;
-	padding: 8px;
 }
