--- a/wp-content/themes/tema_proyecto/assets/css/styles.css
+++ b/wp-content/themes/tema_proyecto/assets/css/styles.css
@@ -405,6 +405,10 @@ footer {
   .img_cocinanueva {
     margin-bottom: 20px;
   }
+  .hover-grid .hover-grid-item {
+    width: 50%;
+    }
+  }
 
 @media (max-width: 1200px) {
   .principal__row {
