--- a/wp-content/themes/tema_proyecto/assets/css/styles.css
+++ b/wp-content/themes/tema_proyecto/assets/css/styles.css
@@ -23,7 +23,14 @@ body {
      object-position: 50%;
 }
 .carousel-inner {
-  height: 250px;
+  height: 650px;
+}
+.item {
+  height: 100%;
+}
+.carousel-inner>.item>img, .carousel-inner>.item>a>img {
+    line-height: 1;
+    height: 100%;
 }
 .formulario_compras {
   height: 120px;
@@ -65,6 +72,9 @@ body {
 /*MAIN INDEX.HTML*/
 .principal__row {
   background-color: #373737;
+}
+.principal {
+  margin-top: 35px;
 }
 /*MAIN DE TODAS LAS PAGINAS, FORMATO GENERAL*/
 .nosotros_main, .filosofia_main, .contacto_main, .ayuda_main {
@@ -369,7 +379,7 @@ footer {
 /*MEDIAS*/
 @media (max-width: 991px) {
   .img-responsive {
-    width: 360px;
+    width: 100vw;
     margin: 0 auto;
   }
   .shopping__titulo h2 {
