--- a/wp-content/themes/tema_proyecto/assets/css/jquery.hoverGrid.css
+++ b/wp-content/themes/tema_proyecto/assets/css/jquery.hoverGrid.css
@@ -7,8 +7,8 @@
 
  .hover-grid .hover-grid-item {
 	width: 100%;
-	height: 127px;
-	margin: 0 18px 18px 0;
+	height: 110px;
+	margin: 0 0 4px 0;
 	float: left;
 	/*-webkit-border-radius: 4px;
 	-moz-border-radius: 4px;
@@ -31,8 +31,8 @@
 .hover-grid-item .caption {
 	background-color: #222;
 	width:100%;
-	height:145px;
-	padding: 18px;
+	height:120px;
+	padding: 50px;
 	position:absolute;
 	left:0;
 	color: #fff;
