--- a/wp-content/themes/tema_proyecto/assets/css/styles.css
+++ b/wp-content/themes/tema_proyecto/assets/css/styles.css
@@ -82,6 +82,11 @@ body {
   width: 100%;
 }
 
+/*FILOSOFIA*/
+.filosofia_header {
+  background-image: url("../img/cabecera2.jpg");
+}
+
 /*MAIN INDEX.HTML*/
 .principal__row {
   background-color: #373737;
@@ -97,6 +102,7 @@ body {
 }
 .nosotros_main {
   padding-bottom: 0;
+  height: 430px;
 }
 
 /*MAIN CONTACTO.HTML*/
@@ -317,6 +323,7 @@ body {
 .shopping {
   background-color: #DCD0D0;
   height: 300px;
+  padding-top: 70px;
 }
 .shopping__titulo {
   font-family: 'Lobster', cursive;
@@ -418,6 +425,7 @@ footer {
 .shopping {
   margin-top: 35px;
   height: 400px;
+  padding-top: 0;
   }
 .footer__logo {
   font-size: 20px;
@@ -430,6 +438,7 @@ footer {
   }
 }
 
+
 @media (max-width: 667px) {
   .header {
     margin-bottom: 0px;
@@ -439,6 +448,9 @@ footer {
   }
   .img_cocinanueva {
     margin-bottom: 20px;
+  }
+  .shopping {
+    padding-top: 0;
   }
 }
 
@@ -460,5 +472,8 @@ footer {
   }
   .formulario {
     top: 20px;
+  }
+  .nosotros_main {
+    height: 100%;
   }
 }
